--- a/eaton.frontend/src/components/header/css/_header-utility-nav.scss
+++ b/eaton.frontend/src/components/header/css/_header-utility-nav.scss
@@ -21,7 +21,8 @@
   .icon {
     position: relative;
     top: 2px;
-    margin-right: 10px;
+    margin-right: 5px;
+    font-size: 1em;
   }
 
   .open-country-selector,
