--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/header/css/header.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/header/css/header.css
@@ -4,7 +4,7 @@
 
 .header-utility-nav__sign-in { text-align: right; }
 
-.header-utility-nav .icon { position: relative; top: 2px; margin-right: 10px; }
+.header-utility-nav .icon { position: relative; top: 2px; margin-right: 5px; font-size: 1em; }
 
 .header-utility-nav .open-country-selector, .header-utility-nav .open-sign-in { color: #FFF; text-decoration: none; }
 
