Landing Hero - Button styles - Add reset styles

--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/title-text-image-link-list/views/view-landing-hero.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/title-text-image-link-list/views/view-landing-hero.html
@@ -20,11 +20,11 @@
                 </div>
             </div>
             <!-- Controls -->
-            <button class="carousel-component__arrow left carousel-control visible-lg visible-md" href=".carousel-component" role="button" data-slide="prev" data-sly-test="${slideList.count > 1}">
+            <button class="carousel-component__arrow left carousel-control visible-lg visible-md button--reset" href=".carousel-component" role="button" data-slide="prev" data-sly-test="${slideList.count > 1}">
                 <span class="icon icon-chevron-left" aria-hidden="true"></span>
                 <span class="sr-only">Previous</span>
             </button>
-            <button class="carousel-component__arrow right carousel-control visible-lg visible-md" href=".carousel-component" role="button" data-slide="next" data-sly-test="${slideList.count > 1}">
+            <button class="carousel-component__arrow right carousel-control visible-lg visible-md button--reset" href=".carousel-component" role="button" data-slide="next" data-sly-test="${slideList.count > 1}">
                 <span class="icon icon-chevron-right" aria-hidden="true"></span>
                 <span class="sr-only">Next</span>
             </button>
