--- a/eaton.frontend/src/components/search-box/css/views/_view-secondary-search-box.scss
+++ b/eaton.frontend/src/components/search-box/css/views/_view-secondary-search-box.scss
@@ -14,7 +14,7 @@
   &__buttons-container {
     height: 30px;
     position: absolute;
-    right: 0;
+    right: 10px;
     top: 5px;
   }
 
@@ -70,6 +70,7 @@
     font-size: 2.5rem;
     font-weight: bold;
     outline: none;
+    padding-right: 100px;
     width: 100%;
 
     &::placeholder {
@@ -100,6 +101,20 @@
   @include media-mobile-and-tablet {
     padding: 30px 15px;
 
+    &__buttons-container {
+      right: -3px;
+      top: 9px;
+
+      .icon {
+        font-size: 17px;
+      }
+    }
+
+    &__button-transparent:first-child::after {
+      top: 0px;
+    }
+
+
     &__form {
       padding: 0;
     }
@@ -123,7 +138,7 @@
     &__input {
       font-size: 1.8rem;
       height: 38px;
-      padding-right: 88px;
+      padding-right: 120px;
       position: relative;
       z-index: 1;
 
