--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/search-box/views/view-secondary-search-box.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/search-box/views/view-secondary-search-box.html
@@ -24,11 +24,11 @@
           <div class="eaton-search-box__buttons-container" >
             <button class="eaton-search-box__button-transparent">
               <span class="sr-only">${data.form.externalLinkLabel}</span>
-              <i class="glyphicon glyphicon glyphicon-new-window" aria-hidden="true"></i>
+              <i class="icon icon-link-external" aria-hidden="true"></i>
             </button>
             <button type="submit" class="eaton-search-box__button-transparent">
               <span class="sr-only">${data.form.submitLabel}</span>
-              <i class="glyphicon glyphicon-search" aria-hidden="true"></i>
+              <i class="icon icon-search" aria-hidden="true"></i>
             </button>
           </div>
         </form>
