Icons updated (EATON - 209) for Header, Mega Menu Modules

--- a/eaton.frontend/src/components/header/css/_header-primary-nav.scss
+++ b/eaton.frontend/src/components/header/css/_header-primary-nav.scss
@@ -17,6 +17,7 @@ $primary-nav-border: #EEF0F2;
     i {
       font-size: 20px;
       color: $color__primary-blue;
+      position: relative;
     }
   }
 
