--- a/eaton.frontend/src/components/search-box/css/views/_view-inline.scss
+++ b/eaton.frontend/src/components/search-box/css/views/_view-inline.scss
@@ -16,6 +16,12 @@
     display: flex;
   }
 
+  .icon-search {
+    font-size: 18px;
+    top: 2px;
+    position: relative;
+  }
+
   &__form-input { // Styles for Form Elements
     appearance: none;
     border: 0;
