--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/search-box/views/view-inline.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/search-box/views/view-inline.html
@@ -10,7 +10,7 @@
           <input type="email" class="form-control eaton-search-inline__form-input" id="mega-menu-search" placeholder="${data.form.placeholder}">
           <button type="submit" class="eaton-search-inline__form-submit">
             <span class="sr-only">${data.form.submitLabel}</span>
-            <i class="glyphicon glyphicon-search" aria-hidden="true"></i>
+            <i class="icon icon-search" aria-hidden="true"></i>
           </button>
       </div>
     </form>
