--- a/eaton.frontend/src/components/header/css/_header-utility-nav.scss
+++ b/eaton.frontend/src/components/header/css/_header-utility-nav.scss
@@ -23,6 +23,11 @@
     top: 2px;
     margin-right: 5px;
     font-size: 1em;
+
+    &.icon-chevron-right {
+      font-size: 12px;
+      top: 1px;
+    }
   }
 
   .open-country-selector,
