--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/link-list/views/view-download-list.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/link-list/views/view-download-list.html
@@ -6,7 +6,7 @@
       <ul data-sly-list="${data.items}" class="eaton-download-list__links">
         <li>
           <a href="${item.url}" class="eaton-download-list__item" aria-label="Download ${item.type} for ${ item.title }">
-            <i class="glyphicon glyphicon-download-alt" aria-hidden="true"></i>
+            <i class="icon icon-download" aria-hidden="true"></i>
             <div class="eaton-download-list__document">
                 <span class="eaton-download-list__title">${item.title}</span>
                 <span class="eaton-download-list__size">(${item.type} ${item.size})</span>
