--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/search-box/css/search-box.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/search-box/css/search-box.css
@@ -4,6 +4,8 @@
 
 .eaton-search-inline .form-group { display: -webkit-box; display: -ms-flexbox; display: flex; }
 
+.eaton-search-inline .icon-search { font-size: 18px; top: 2px; position: relative; }
+
 .eaton-search-inline__form-input { -webkit-appearance: none; -moz-appearance: none; appearance: none; border: 0; background: #FFF; border-radius: 0; font-size: 1em; height: auto; }
 
 .eaton-search-inline__form-submit { -webkit-appearance: none; -moz-appearance: none; appearance: none; background: #FFF; border: 0; color: #005EB8; padding: 10px 20px; }
