Fix caret icon - Utility Nav Header

--- a/eaton.frontend/src/components/header/css/_header-utility-nav.scss
+++ b/eaton.frontend/src/components/header/css/_header-utility-nav.scss
@@ -24,9 +24,10 @@
     margin-right: 5px;
     font-size: 1em;
 
-    &.icon-chevron-right {
-      font-size: 12px;
-      top: 1px;
+    &.icon-chevron-down {
+      font-size: 9px;
+      top: 0px;
+      margin-left: 6px;
     }
   }
 
