--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/header/css/header.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/header/css/header.css
@@ -6,7 +6,7 @@
 
 .header-utility-nav .icon { position: relative; top: 2px; margin-right: 5px; font-size: 1em; }
 
-.header-utility-nav .icon.icon-chevron-right { font-size: 12px; top: 1px; }
+.header-utility-nav .icon.icon-chevron-down { font-size: 9px; top: 0px; margin-left: 6px; }
 
 .header-utility-nav .open-country-selector, .header-utility-nav .open-sign-in { color: #FFF; text-decoration: none; }
 
