--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/title-text-image-link-list/css/title-text-image-link-list.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/title-text-image-link-list/css/title-text-image-link-list.css
@@ -37,13 +37,13 @@
 
 .featured-story-component__content { padding: 60px 40px; }
 
-.featured-story-component__text { color: #FFF; font-size: 2.30em; font-family: "Eaton", Arial, sans-serif; line-height: 1.25em; padding-top: 30px; }
+.featured-story-component__text { color: #FFF; font-size: 2.3em; font-family: "Eaton", Arial, sans-serif; line-height: 1.25em; padding-top: 30px; }
 
 .featured-story-component__image { width: 100%; }
 
 .featured-story-component__row--nopadding { padding: 0; }
 
-.featured-story-component__arrow { font-size: .70em; left: 10px; }
+.featured-story-component__arrow { font-size: 0.7em; left: 10px; }
 
 .featured-story-component__title { font-size: 2.55em; }
 
