--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/title-text-image-link/css/title-text-image-link.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/title-text-image-link/css/title-text-image-link.css
@@ -1,7 +1,3 @@
-.eaton-page-overview .eaton-title__headline { font-family: 'EatonMedium', sans-serif; font-size: 35px; line-height: 40px; }
-
-@media screen and (min-width: 992px) { .eaton-page-overview .eaton-title__headline { font-size: 54px; line-height: 68px; } }
-
 .eaton-title-text-image { font-family: "Eaton", Arial, sans-serif; }
 
 .category-hightlight-header__text { font-size: 1.5em; color: #FFF; }
@@ -55,35 +51,42 @@
 
 @media screen and (min-width: 768px) and (max-width: 991px) { .feature-block-component__container { height: 400px; } }
 
-.eaton-title-text-image { font-family: "Eaton", Arial, sans-serif; }
+.eaton-article-feature { font-family: "Eaton", Arial, sans-serif; }
 
-.article-feature-image { width: 100%; height: auto; margin-top: 60px; }
+.eaton-article-feature__image { width: 100%; height: auto; margin-top: 60px; }
 
-.article-feature-title { font-size: 1.5em; font-weight: bold; color: #333F48; text-transform: uppercase; margin-top: 30px; }
+.eaton-article-feature__title { font-size: 1.5em; font-weight: bold; color: #333F48; text-transform: uppercase; margin-top: 30px; }
 
-.article-feature-cta { color: #005EB8; font-size: 2.5em; font-family: Arial; font-weight: bold; margin-top: 15px; margin-bottom: 15px; }
+.eaton-article-feature__cta { color: #005EB8; font-size: 2.5em; font-family: Arial; font-weight: bold; margin-top: 15px; margin-bottom: 15px; }
 
-.article-feature-cta a:hover, .article-feature-cta a:active, .article-feature-cta a:visited, .article-feature-cta a:focus { text-decoration: none; color: #005EB8; }
+.eaton-article-feature__cta a:hover, .eaton-article-feature__cta a:active, .eaton-article-feature__cta a:visited, .eaton-article-feature__cta a:focus { text-decoration: none; color: #005EB8; }
 
-.article-feature-date { margin-bottom: 30px; }
+.eaton-article-feature__date { font-style: italic; margin-bottom: 30px; }
 
-.article-feature-body { margin-bottom: 60px; font-size: 1.5em; }
+.eaton-article-feature__body { margin-bottom: 60px; font-size: 1.5em; }
 
-@media only screen and (max-width: 767px) { .article-feature-image { margin-top: 30px; }
-  .article-feature-title { font-size: 1.1em; margin-top: 15px; }
-  .article-feature-date { margin-bottom: 15px; }
-  .article-feature-body { margin-bottom: 30px; line-height: 1.5em; font-size: 1.2em; }
-  .article-feature-cta { font-size: 1.5em; margin-top: 10px; margin-bottom: 10px; } }
+@media only screen and (max-width: 767px) { .article-feature__image { margin-top: 30px; }
+  .article-feature__title { font-size: 1.1em; margin-top: 15px; }
+  .article-feature__date { margin-bottom: 15px; }
+  .article-feature__body { margin-bottom: 30px; line-height: 1.5em; font-size: 1.2em; }
+  .article-feature__cta { font-size: 1.5em; margin-top: 10px; margin-bottom: 10px; } }
 
-.eaton-page-overview { padding: 120px 0; }
+.eaton-page-overview { padding: 60px 0; }
 
-.eaton-page-overview__title { position: relative; margin-bottom: 60px; padding-bottom: 60px; }
+.eaton-page-overview__title { position: relative; }
 
 .eaton-page-overview__title::after { content: ''; background-color: #005EB8; bottom: 0; display: block; height: 4px; left: 0; position: absolute; width: 68px; }
 
-@media screen and (max-width: 767px) { .eaton-page-overview__cta { margin-top: 60px; } }
+@media screen and (max-width: 991px) { .eaton-page-overview__title { padding-bottom: 30px; }
+  .eaton-page-overview__content, .eaton-page-overview__cta { margin-top: 30px; }
+  .eaton-page-overview__cta--mobile { display: block; }
+  .eaton-page-overview__cta--desktop { display: none; } }
 
-@media screen and (min-width: 992px) { .eaton-page-overview .eaton-title__headline { font-size: 54px; line-height: 68px; } }
+@media screen and (min-width: 992px) { .eaton-page-overview { padding: 120px 0; }
+  .eaton-page-overview__title { padding-bottom: 50px; }
+  .eaton-page-overview__cta { margin-top: 60px; }
+  .eaton-page-overview__cta--mobile { display: none; }
+  .eaton-page-overview__cta--desktop { display: block; } }
 
 .eaton-ttil-card-view__image { margin-bottom: 30px; }
 
