[EATON-214] Refactor Page Overview

--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/title-text-image-link/views/view-page-overview.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/title-text-image-link/views/view-page-overview.html
@@ -8,7 +8,8 @@
         <div class="col-xs-12 col-md-6">
           <h1 class="eaton-page-overview__title b-heading-h1">${ data.title }</h1>
 
-          <div data-sly-test="${ data.cta.text }" class="eaton-page-overview__cta eaton-page-overview__cta--desktop">
+          <div data-sly-test="${ data.cta.text }"
+            class="eaton-page-overview__cta eaton-page-overview__cta--desktop">
             <a href="${ data.cta.url }" class="b-button b-button__primary b-button__primary--light" role="button">${ data.cta.text }</a>
           </div>
         </div>
