--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/title-text-image-link/views/view-page-overview.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/title-text-image-link/views/view-page-overview.html
@@ -1,4 +1,4 @@
-<sly data-sly-use.data="${'../data/view-page-overview-data.js' @tesdata=properties.testdata}">
+<sly data-sly-use.data="${'../data/view-page-overview-data.js' @testdata=properties.testdata}">
 
   <div class="eaton-page-overview">
 
