[EATON-214] Text Element should inherit “Body-copy” styles from styleguide. + Adding cta.target to CTA’s

--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/title-text-image-link/views/view-page-overview.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/title-text-image-link/views/view-page-overview.html
@@ -10,19 +10,25 @@
 
           <div data-sly-test="${ data.cta.text }"
             class="eaton-page-overview__cta eaton-page-overview__cta--desktop">
-            <a href="${ data.cta.url }" class="b-button b-button__primary b-button__primary--light" role="button">${ data.cta.text }</a>
+            <a href="${ data.cta.url }"
+              role="button"
+              class="b-button b-button__primary b-button__primary--light"
+              target="${ data.cta.target }">${ data.cta.text }</a>
           </div>
         </div>
 
         <div class="col-xs-12 col-md-6">
-          <div class="eaton-page-overview__content">${ data.text }</div>
+          <div class="eaton-page-overview__content b-body-copy">${ data.text }</div>
         </div>
 
       </div>
 
       <div data-sly-test="${ data.cta.text }"
         class="eaton-page-overview__cta eaton-page-overview__cta--mobile text-center">
-        <a href="${ data.cta.url }" class="b-button b-button__primary b-button__primary--light" role="button">${ data.cta.text }</a>
+        <a href="${ data.cta.url }"
+          role="button"
+          class="b-button b-button__primary b-button__primary--light"
+          target="${ data.cta.target }">${ data.cta.text }</a>
       </div>
 
     </div>
