--- a/eaton.frontend/src/global/css/base/_typography.scss
+++ b/eaton.frontend/src/global/css/base/_typography.scss
@@ -112,24 +112,23 @@ h5,
 
 // TODO: TBD
 // sass-lint:disable no-css-comments
-/*
-.body-link {
-  color: $color__primary-blue;
 
-  &:hover,
-  &:focus,
-  &:active {
-    color: $color__accent-darkblue; //TBD
-  }
-
-  .dark-theme & {
-    color: $color__white;
-
-    &:hover,
-    &:focus,
-    &:active {
-      color: $color__white; //TBD
-    }
-  }
-}
-*/
+// .body-link {
+//   color: $color__primary-blue;
+//
+//   &:hover,
+//   &:focus,
+//   &:active {
+//     color: $color__accent-darkblue; //TBD
+//   }
+//
+//   .dark-theme & {
+//     color: $color__white;
+//
+//     &:hover,
+//     &:focus,
+//     &:active {
+//       color: $color__white; //TBD
+//     }
+//   }
+// }
