--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/quote/css/quote.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/quote/css/quote.css
@@ -2,7 +2,7 @@
 
 .eaton-quote .container { padding: 100px 0 60px; border-top: 4px solid #EEF0F2; border-bottom: 4px solid #EEF0F2; position: relative; }
 
-.eaton-quote__image { width: 80px; height: 82px; background: #005EB8; color: #FFF; position: absolute; top: 0; left: 0; right: 0; margin: 0 auto; }
+.eaton-quote__image { color: #005EB8; position: absolute; top: 0; left: 0; right: 0; margin: -8px auto 0; }
 
 .eaton-quote__image .icon { font-size: 8rem; }
 
@@ -13,7 +13,7 @@
 .eaton-quote__name { font-weight: bold; }
 
 @media screen and (max-width: 991px) { .eaton-quote .container { padding: 60px 15px 25px; }
-  .eaton-quote__image { width: 17%; height: 50px; background-size: contain; }
+  .eaton-quote__image .icon { font-size: 6rem; line-height: .9; }
   .eaton-quote__text { font-size: 23px; margin-bottom: 20px; }
   .eaton-quote__author { font-size: 16px; }
   .eaton-quote__name { display: block; } }
