ListComponent - Fix Styles were defined globally

--- a/eaton.frontend/src/components/list/css/views/_view-default.scss
+++ b/eaton.frontend/src/components/list/css/views/_view-default.scss
@@ -1,44 +1,24 @@
+//-----------------------------------
+// List Component: View Deafult
+//-----------------------------------
+
 .eaton-list-component {
+
   font-family: $font-family__primary;
   margin-bottom: 60px;
-}
 
-.category__image {
-  width: 100%;
-}
-
-.category__title--font,
-.related-category__title--font {
-  font-size: 1em;
-  font-weight: bold;
-  color: $color__primary-gray1;
-  text-transform: uppercase;
-}
-
-.category__item--border {
-  border-left: 1px solid $color__secondary-gray1;
-  border-right: 1px solid $color__secondary-gray1;
-  border-bottom: 2px solid $color__secondary-gray1;
-}
-
-.category__link--font {
-  font-size: 1.3em;
-  font-weight: bold;
-}
-
-.eaton-list-component a {
-  text-decoration: none;
-
-  &:hover,
-  &:active,
-  &:visited,
-  &:focus {
-    color: $color__primary-blue;
+  a {
     text-decoration: none;
-  }
-}
 
-.eaton-list-component {
+    &:hover,
+    &:active,
+    &:visited,
+    &:focus {
+      color: $color__primary-blue;
+      text-decoration: none;
+    }
+  }
+
   .carousel-indicators {
     position: inherit;
     margin: 40px auto 0;
@@ -60,80 +40,108 @@
     height: 15px;
     margin: 0 4px;
   }
-}
 
 
-.category__item-innerpadding {
-  padding: 30px;
-}
-
-.category__title--bottompadding {
-  padding-bottom: 15px;
-}
-
-.header-text__topmargin {
-  margin-top: 5%;
-}
-
-.category__item {
-  min-height: 231px;
-}
-
-.category-item-date {
-  padding-top: 15px;
-  color: $color__primary-gray1;
-}
-
-@media only screen and (max-width: 767px) {
-  .category__item-innerpadding {
-    padding: 25px;
+  .category__image {
+    width: 100%;
   }
 
-  .carousel__item {
-    min-height: 233px;
-  }
-
-  .category__link--font {
-    font-size: 1.1em;
-    line-height: 1.2em;
-  }
-
-  .category__title--bottompadding {
-    padding-bottom: 10px;
-  }
-}
-
-@media only screen and (min-width: 768px) and (max-width: 991px) {
-  .related-category--tablet-left {
-    float: left;
-  }
-
-  .related-category--tablet-right {
-    float: right;
+  .category__title--font,
+  .related-category__title--font {
+    font-size: 1em;
+    font-weight: bold;
+    color: $color__primary-gray1;
+    text-transform: uppercase;
   }
 
   .category__item--border {
-    border-top: 1px solid $color__secondary-gray1;
-    background-color: $color__white;
-  }
-
-  .equal-height-row {
-    margin-bottom: 30px;
-    display: flex;
-    flex-wrap: wrap;
-
-    > div {
-      width: 50%;
-      display: inline-block;
-    }
-  }
-
-  .category__item,
-  .category__image {
-    min-height: 263px;
+    border-left: 1px solid $color__secondary-gray1;
+    border-right: 1px solid $color__secondary-gray1;
+    border-bottom: 2px solid $color__secondary-gray1;
   }
 
   .category__link--font {
     font-size: 1.3em;
+    font-weight: bold;
+  }
+
+
+  .category__item-innerpadding {
+    padding: 30px;
+  }
+
+  .category__title--bottompadding {
+    padding-bottom: 15px;
+  }
+
+  .header-text__topmargin {
+    margin-top: 5%;
+  }
+
+  .category__item {
+    min-height: 231px;
+  }
+
+  .category-item-date {
+    padding-top: 15px;
+    color: $color__primary-gray1;
+  }
+
+
+
+  @include media-mobile-only {
+    .category__item-innerpadding {
+      padding: 25px;
+    }
+
+    .carousel__item {
+      min-height: 233px;
+    }
+
+    .category__link--font {
+      font-size: 1.1em;
+      line-height: 1.2em;
+    }
+
+    .category__title--bottompadding {
+      padding-bottom: 10px;
+    }
+  }
+
+
+
+  @include media-tablet-only {
+    .related-category--tablet-left {
+      float: left;
+    }
+
+    .related-category--tablet-right {
+      float: right;
+    }
+
+    .category__item--border {
+      border-top: 1px solid $color__secondary-gray1;
+      background-color: $color__white;
+    }
+
+    .equal-height-row {
+      margin-bottom: 30px;
+      display: flex;
+      flex-wrap: wrap;
+
+      > div {
+        width: 50%;
+        display: inline-block;
+      }
+    }
+
+    .category__item,
+    .category__image {
+      min-height: 263px;
+    }
+
+    .category__link--font {
+      font-size: 1.3em;
+    }
   }
 }
